compiler/e2e/test/snapshot/memory_checker/move_out_in_inner_loop/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
warning: the value has been moved inside the loop, which could be used in the subsequent iteration
   ╭─ compiler/e2e/test/snapshot/memory_checker/move_out_in_inner_loop/main.pnx:14:21
   │
14 │             consume(value)
   │                     ^^^^^

error: Compilation aborted due to 1 error(s)



stdout:
